--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
+    "test": "jest tests --watch-all"
   },
   "keywords": [
     "mern",
     "chat-app"
   ],
-  "author": "Piyush Agarwal",
+  "author": "Manish Kumar Verma",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^9.0.2",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-async-handler": "^1.1.4",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^8.15.1",
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.7.2",
+    "supertest": "^6.3.3"
   }
 }
